Fixed footer (properly align)

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ footer{
     flex-wrap: wrap;
     background: rgb(255, 255, 255);
     margin-top: auto;
-    padding: 50px 100px;
+    padding: 20px 100px;
 }
 
 ul{
@@ -38,18 +38,17 @@ ul{
 
 .footer-col{
     width: 30%;
-    padding: 0 15px;
     margin-top: 10px;
 }
 .footer-col h4{
     position:relative;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-weight: 400;
     font-size: 22px;
     text-transform: capitalize;
 }
 
-.footer-col ul li a, .footer-col ul li p{
+.footer-col ul li a{
 	font-size: 16px;
 	text-transform: none;
 	color: #ffffff;
@@ -57,6 +56,20 @@ ul{
 	font-weight: 300;
 	color: rgb(152, 175, 193);
 	display: block;
+}
+
+.footer-col ul li p{
+	font-size: 12px;
+	text-transform: none;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: rgb(152, 175, 193);
+	display: block;
+}
+ul li a:hover{
+    color:rgb(78, 163, 227);
+    padding-left: 2px;
 }
 
 .title {
@@ -68,7 +81,7 @@ ul{
 }
 
 .content {   
-    padding: 35px 100px;
+    padding: 50px 100px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -132,11 +145,6 @@ ul{
     margin: 0;
 }
 
-/*register css*/
-.register-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
+.form-container {
+    margin: 0 auto;
 }
